--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,14 @@
 <h1><%= @list.name %></h1>
+  <ul>
+    <%@list.bookmarks.each do |bookmark|  %>
+    <li>
+      <%= bookmark.movie.title %>
+      <%= bookmark.comment %>
+    </li>
+    <% end %>
+  </ul>
 <%= link_to 'back to all', lists_path %>
+<%= link_to 'Add a movie', new_list_bookmark_path(@list) %>
 <%= link_to "Delete",
   list_path(@list),
   data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
